# AdventOfCode2022

./: CMakeLists.txt
CPP/2/1/: main.cpp
CPP/2/2/: main.cpp
cpp/8/1/: main.cpp
