cmake_minimum_required(VERSION 3.24)
project(AdventOfCode2022)

set(CMAKE_CXX_STANDARD 17)

add_executable(AdventOfCode2022_CPP_1_1 CPP/1/1/main.cpp)
add_executable(AdventOfCode2022_CPP_1_2 CPP/1/2/main.cpp)
add_executable(AdventOfCode2022_CPP_2_1 CPP/2/1/main.cpp)
add_executable(AdventOfCode2022_CPP_2_2 CPP/2/2/main.cpp)
add_executable(AdventOfCode2022_CPP_3_1 CPP/3/1/main.cpp)
add_executable(AdventOfCode2022_CPP_3_2 CPP/3/2/main.cpp)
add_executable(AdventOfCode2022_CPP_4_1 CPP/4/1/main.cpp)
add_executable(AdventOfCode2022_CPP_4_2 CPP/4/2/main.cpp)
add_executable(AdventOfCode2022_CPP_5_1 CPP/5/1/main.cpp)
add_executable(AdventOfCode2022_CPP_5_2 CPP/5/2/main.cpp)
add_executable(AdventOfCode2022_CPP_6_1 CPP/6/1/main.cpp)
add_executable(AdventOfCode2022_CPP_6_2 CPP/6/2/main.cpp)
add_executable(AdventOfCode2022_CPP_7_1 CPP/7/1/main.cpp CPP/7/1/node.cpp CPP/7/1/node.h)
add_executable(AdventOfCode2022_CPP_7_2 CPP/7/2/main.cpp CPP/7/2/node.cpp CPP/7/2/node.h)
