cmake_minimum_required(VERSION 3.24)
project(AdventOfCode2022)

set(CMAKE_CXX_STANDARD 17)

add_executable(AdventOfCode2022_cpp_1_1 cpp/1/1/main.cpp)
add_executable(AdventOfCode2022_cpp_1_2 cpp/1/2/main.cpp)
add_executable(AdventOfCode2022_cpp_2_1 cpp/2/1/main.cpp)
add_executable(AdventOfCode2022_cpp_2_2 cpp/2/2/main.cpp)
add_executable(AdventOfCode2022_cpp_3_1 cpp/3/1/main.cpp)
add_executable(AdventOfCode2022_cpp_3_2 cpp/3/2/main.cpp)
add_executable(AdventOfCode2022_cpp_4_1 cpp/4/1/main.cpp)
add_executable(AdventOfCode2022_cpp_4_2 cpp/4/2/main.cpp)
add_executable(AdventOfCode2022_cpp_5_1 cpp/5/1/main.cpp)
add_executable(AdventOfCode2022_cpp_5_2 cpp/5/2/main.cpp)
add_executable(AdventOfCode2022_cpp_6_1 cpp/6/1/main.cpp)
add_executable(AdventOfCode2022_cpp_6_2 cpp/6/2/main.cpp)
add_executable(AdventOfCode2022_cpp_7_1 cpp/7/1/main.cpp cpp/7/1/node.cpp cpp/7/1/node.h)
add_executable(AdventOfCode2022_cpp_7_2 cpp/7/2/main.cpp cpp/7/2/node.cpp cpp/7/2/node.h)
add_executable(AdventOfCode2022_cpp_8_1 cpp/8/1/main.cpp)
add_executable(AdventOfCode2022_cpp_8_2 cpp/8/2/main.cpp)
